updates to notebook

--- a/workout_analysis.ipynb
+++ b/workout_analysis.ipynb
@@ -9617,7 +9617,7 @@
    ],
    "source": [
     "# return recorded Active Energy Burned\n",
-    "record_data.loc[(record_data['type'].str.contains('ActiveEnergyBurned'))]"
+    "record_data.loc[(record_data[\"type\"].str.contains(\"ActiveEnergyBurned\"))]"
    ]
   },
   {
@@ -9627,23 +9627,37 @@
    "outputs": [],
    "source": [
     "# remove 'sourceName', 'sourceVersion', 'device', 'creationDate', 'endDate' columns\n",
-    "record_data_cleaned = record_data.drop(['sourceName', 'sourceVersion', 'device', 'creationDate', 'endDate'], axis=1)\n",
+    "record_data_cleaned = record_data.drop(\n",
+    "    [\"sourceName\", \"sourceVersion\", \"device\", \"creationDate\", \"endDate\"], axis=1\n",
+    ")\n",
     "\n",
     "# transform 'startDate' into date format\n",
-    "record_data['startDate'] = pd.to_datetime(record_data['startDate']).dt.strftime('%Y-%m-%d')\n",
-    "record_data_cleaned['Day'] = pd.to_datetime(record_data['startDate']).dt.strftime('%A')\n",
-    "record_data_cleaned['Date'] = pd.to_datetime(record_data['startDate']).dt.strftime('%Y-%m%d')\n",
-    "record_data_cleaned['Month'] = pd.to_datetime(record_data['startDate']).dt.strftime('%B')\n",
+    "record_data[\"startDate\"] = pd.to_datetime(record_data[\"startDate\"]).dt.strftime(\n",
+    "    \"%Y-%m-%d\"\n",
+    ")\n",
+    "record_data_cleaned[\"Day\"] = pd.to_datetime(record_data[\"startDate\"]).dt.strftime(\"%A\")\n",
+    "record_data_cleaned[\"Date\"] = pd.to_datetime(record_data[\"startDate\"]).dt.strftime(\n",
+    "    \"%Y-%m%d\"\n",
+    ")\n",
+    "record_data_cleaned[\"Month\"] = pd.to_datetime(record_data[\"startDate\"]).dt.strftime(\n",
+    "    \"%B\"\n",
+    ")\n",
     "\n",
     "# value is numeric, NaN if fails\n",
-    "record_data_cleaned['value'] = pd.to_numeric(record_data['value'], errors='coerce')\n",
+    "record_data_cleaned[\"value\"] = pd.to_numeric(record_data[\"value\"], errors=\"coerce\")\n",
     "\n",
-    "#shorter observation names\n",
-    "record_data_cleaned['type'] = record_data_cleaned['type'].str.replace('HKQuantityTypeIdentifier', '')\n",
-    "record_data_cleaned['type'] = record_data_cleaned['type'].str.replace('HKCategoryTypeIdentifier', '')\n",
+    "# shorter observation names\n",
+    "record_data_cleaned[\"type\"] = record_data_cleaned[\"type\"].str.replace(\n",
+    "    \"HKQuantityTypeIdentifier\", \"\"\n",
+    ")\n",
+    "record_data_cleaned[\"type\"] = record_data_cleaned[\"type\"].str.replace(\n",
+    "    \"HKCategoryTypeIdentifier\", \"\"\n",
+    ")\n",
     "\n",
     "# reorder 'record_data' columns\n",
-    "record_data_cleaned = record_data_cleaned[['type', 'Date', 'Day', 'Month', 'value', 'unit']]"
+    "record_data_cleaned = record_data_cleaned[\n",
+    "    [\"type\", \"Date\", \"Day\", \"Month\", \"value\", \"unit\"]\n",
+    "]"
    ]
   },
   {
@@ -9657,25 +9671,29 @@
     "\n",
     "# filter 'type' of 'record_data'\n",
     "record_types = [\n",
-    "    'BodyMass',\n",
-    "    'ActiveEnergyBurned',\n",
-    "    'BasalEnergyBurned',\n",
-    "    'DistanceWalkingRunning',\n",
-    "    'StepCount',\n",
-    "    'AppleStandTime',\n",
-    "    'WalkingSpeed',\n",
-    "    'RunningSpeed',\n",
-    "    'HeartRateVariabilitySDNN',\n",
-    "    'RestingHeartRate',\n",
-    "    'WalkingHeartRate',\n",
-    "    'WalkingHeartRateAverage',\n",
-    "    'VO2Max',\n",
-    "    'HeartRateRecoveryOneMinute'\n",
+    "    \"BodyMass\",\n",
+    "    \"ActiveEnergyBurned\",\n",
+    "    \"BasalEnergyBurned\",\n",
+    "    \"DistanceWalkingRunning\",\n",
+    "    \"StepCount\",\n",
+    "    \"AppleStandTime\",\n",
+    "    \"WalkingSpeed\",\n",
+    "    \"RunningSpeed\",\n",
+    "    \"HeartRateVariabilitySDNN\",\n",
+    "    \"RestingHeartRate\",\n",
+    "    \"WalkingHeartRate\",\n",
+    "    \"WalkingHeartRateAverage\",\n",
+    "    \"VO2Max\",\n",
+    "    \"HeartRateRecoveryOneMinute\",\n",
     "]\n",
     "\n",
     "# create new DataFrame for every interested data\n",
     "for record_type in record_types:\n",
-    "    record_data_df_dict[record_type] = record_data_cleaned.loc[(record_data_cleaned['type'].str.contains(record_type))].rename(columns={\"value\":record_type}).sort_values(by=\"Date\")"
+    "    record_data_df_dict[record_type] = (\n",
+    "        record_data_cleaned.loc[(record_data_cleaned[\"type\"].str.contains(record_type))]\n",
+    "        .rename(columns={\"value\": record_type})\n",
+    "        .sort_values(by=\"Date\")\n",
+    "    )"
    ]
   },
   {
@@ -9686,16 +9704,21 @@
    "source": [
     "# list of data 'type' that need to be summed daily\n",
     "key_get_sum = [\n",
-    "    'BasalEnergyBurned',\n",
-    "    'ActiveEnergyBurned',\n",
-    "    'DistanceWalkingRunning',\n",
-    "    'StepCount',\n",
-    "    'AppleStandTime'\n",
+    "    \"BasalEnergyBurned\",\n",
+    "    \"ActiveEnergyBurned\",\n",
+    "    \"DistanceWalkingRunning\",\n",
+    "    \"StepCount\",\n",
+    "    \"AppleStandTime\",\n",
     "]\n",
     "\n",
     "record_data_df_dict_daily = {}\n",
     "for key in key_get_sum:\n",
-    "    record_data_df_dict_daily[key] = record_data_df_dict[key].groupby(record_data_df_dict[key]['Date']).agg({key: 'sum', 'Day': lambda x: x.mode().iat[0]}).reset_index()"
+    "    record_data_df_dict_daily[key] = (\n",
+    "        record_data_df_dict[key]\n",
+    "        .groupby(record_data_df_dict[key][\"Date\"])\n",
+    "        .agg({key: \"sum\", \"Day\": lambda x: x.mode().iat[0]})\n",
+    "        .reset_index()\n",
+    "    )"
    ]
   },
   {
