--- a/workout_data_cleaning.ipynb
+++ b/workout_data_cleaning.ipynb
@@ -9617,7 +9617,7 @@
    ],
    "source": [
     "# return recorded Active Energy Burned\n",
-    "record_data.loc[(record_data['type'].str.contains('ActiveEnergyBurned'))]"
+    "record_data.loc[(record_data[\"type\"].str.contains(\"ActiveEnergyBurned\"))]"
    ]
   },
   {
@@ -9627,23 +9627,37 @@
    "outputs": [],
    "source": [
     "# remove 'sourceName', 'sourceVersion', 'device', 'creationDate', 'endDate' columns\n",
-    "record_data_cleaned = record_data.drop(['sourceName', 'sourceVersion', 'device', 'creationDate', 'endDate'], axis=1)\n",
+    "record_data_cleaned = record_data.drop(\n",
+    "    [\"sourceName\", \"sourceVersion\", \"device\", \"creationDate\", \"endDate\"], axis=1\n",
+    ")\n",
     "\n",
     "# transform 'startDate' into date format\n",
-    "record_data['startDate'] = pd.to_datetime(record_data['startDate']).dt.strftime('%Y-%m-%d')\n",
-    "record_data_cleaned['Day'] = pd.to_datetime(record_data['startDate']).dt.strftime('%A')\n",
-    "record_data_cleaned['Date'] = pd.to_datetime(record_data['startDate']).dt.strftime('%Y-%m%d')\n",
-    "record_data_cleaned['Month'] = pd.to_datetime(record_data['startDate']).dt.strftime('%B')\n",
+    "record_data[\"startDate\"] = pd.to_datetime(record_data[\"startDate\"]).dt.strftime(\n",
+    "    \"%Y-%m-%d\"\n",
+    ")\n",
+    "record_data_cleaned[\"Day\"] = pd.to_datetime(record_data[\"startDate\"]).dt.strftime(\"%A\")\n",
+    "record_data_cleaned[\"Date\"] = pd.to_datetime(record_data[\"startDate\"]).dt.strftime(\n",
+    "    \"%Y-%m%d\"\n",
+    ")\n",
+    "record_data_cleaned[\"Month\"] = pd.to_datetime(record_data[\"startDate\"]).dt.strftime(\n",
+    "    \"%B\"\n",
+    ")\n",
     "\n",
     "# value is numeric, NaN if fails\n",
-    "record_data_cleaned['value'] = pd.to_numeric(record_data['value'], errors='coerce')\n",
+    "record_data_cleaned[\"value\"] = pd.to_numeric(record_data[\"value\"], errors=\"coerce\")\n",
     "\n",
-    "#shorter observation names\n",
-    "record_data_cleaned['type'] = record_data_cleaned['type'].str.replace('HKQuantityTypeIdentifier', '')\n",
-    "record_data_cleaned['type'] = record_data_cleaned['type'].str.replace('HKCategoryTypeIdentifier', '')\n",
+    "# shorter observation names\n",
+    "record_data_cleaned[\"type\"] = record_data_cleaned[\"type\"].str.replace(\n",
+    "    \"HKQuantityTypeIdentifier\", \"\"\n",
+    ")\n",
+    "record_data_cleaned[\"type\"] = record_data_cleaned[\"type\"].str.replace(\n",
+    "    \"HKCategoryTypeIdentifier\", \"\"\n",
+    ")\n",
     "\n",
     "# reorder 'record_data' columns\n",
-    "record_data_cleaned = record_data_cleaned[['type', 'Date', 'Day', 'Month', 'value', 'unit']]"
+    "record_data_cleaned = record_data_cleaned[\n",
+    "    [\"type\", \"Date\", \"Day\", \"Month\", \"value\", \"unit\"]\n",
+    "]"
    ]
   },
   {
@@ -9657,25 +9671,29 @@
     "\n",
     "# filter 'type' of 'record_data'\n",
     "record_types = [\n",
-    "    'BodyMass',\n",
-    "    'ActiveEnergyBurned',\n",
-    "    'BasalEnergyBurned',\n",
-    "    'DistanceWalkingRunning',\n",
-    "    'StepCount',\n",
-    "    'AppleStandTime',\n",
-    "    'WalkingSpeed',\n",
-    "    'RunningSpeed',\n",
-    "    'HeartRateVariabilitySDNN',\n",
-    "    'RestingHeartRate',\n",
-    "    'WalkingHeartRate',\n",
-    "    'WalkingHeartRateAverage',\n",
-    "    'VO2Max',\n",
-    "    'HeartRateRecoveryOneMinute'\n",
+    "    \"BodyMass\",\n",
+    "    \"ActiveEnergyBurned\",\n",
+    "    \"BasalEnergyBurned\",\n",
+    "    \"DistanceWalkingRunning\",\n",
+    "    \"StepCount\",\n",
+    "    \"AppleStandTime\",\n",
+    "    \"WalkingSpeed\",\n",
+    "    \"RunningSpeed\",\n",
+    "    \"HeartRateVariabilitySDNN\",\n",
+    "    \"RestingHeartRate\",\n",
+    "    \"WalkingHeartRate\",\n",
+    "    \"WalkingHeartRateAverage\",\n",
+    "    \"VO2Max\",\n",
+    "    \"HeartRateRecoveryOneMinute\",\n",
     "]\n",
     "\n",
     "# create new DataFrame for every interested data\n",
     "for record_type in record_types:\n",
-    "    record_data_df_dict[record_type] = record_data_cleaned.loc[(record_data_cleaned['type'].str.contains(record_type))].rename(columns={\"value\":record_type}).sort_values(by=\"Date\")"
+    "    record_data_df_dict[record_type] = (\n",
+    "        record_data_cleaned.loc[(record_data_cleaned[\"type\"].str.contains(record_type))]\n",
+    "        .rename(columns={\"value\": record_type})\n",
+    "        .sort_values(by=\"Date\")\n",
+    "    )"
    ]
   },
   {
@@ -9686,16 +9704,21 @@
    "source": [
     "# list of data 'type' that need to be summed daily\n",
     "key_get_sum = [\n",
-    "    'BasalEnergyBurned',\n",
-    "    'ActiveEnergyBurned',\n",
-    "    'DistanceWalkingRunning',\n",
-    "    'StepCount',\n",
-    "    'AppleStandTime'\n",
+    "    \"BasalEnergyBurned\",\n",
+    "    \"ActiveEnergyBurned\",\n",
+    "    \"DistanceWalkingRunning\",\n",
+    "    \"StepCount\",\n",
+    "    \"AppleStandTime\",\n",
     "]\n",
     "\n",
     "record_data_df_dict_daily = {}\n",
     "for key in key_get_sum:\n",
-    "    record_data_df_dict_daily[key] = record_data_df_dict[key].groupby(record_data_df_dict[key]['Date']).agg({key: 'sum', 'Day':lambda x: x.mode().iat[0]}).reset_index()"
+    "    record_data_df_dict_daily[key] = (\n",
+    "        record_data_df_dict[key]\n",
+    "        .groupby(record_data_df_dict[key][\"Date\"])\n",
+    "        .agg({key: \"sum\", \"Day\": lambda x: x.mode().iat[0]})\n",
+    "        .reset_index()\n",
+    "    )"
    ]
   },
   {
@@ -9704,9 +9727,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "record_data_df_dict_monthly ={}\n",
+    "record_data_df_dict_monthly = {}\n",
     "for key in key_get_sum:\n",
-    "    record_data_df_dict_monthly[key] = record_data_df_dict[key].groupby(record_data_df_dict[key]['Date'].str[:-3]).agg({key: 'sum', 'Month': lambda x: x.mode().iat[0]}).reset_index()"
+    "    record_data_df_dict_monthly[key] = (\n",
+    "        record_data_df_dict[key]\n",
+    "        .groupby(record_data_df_dict[key][\"Date\"].str[:-3])\n",
+    "        .agg({key: \"sum\", \"Month\": lambda x: x.mode().iat[0]})\n",
+    "        .reset_index()\n",
+    "    )"
    ]
   },
   {
@@ -9719,21 +9747,39 @@
     "# Workout routine starts from 1 September 2022 -> data filter after workout are specified starts on this date\n",
     "\n",
     "# Body mass progress before and after Workout\n",
-    "record_data_df_BodyMass_start_Sep23 = record_data_df_dict['BodyMass'].loc[(record_data_df_dict['BodyMass']['Date'] >= '2023-09-01')]\n",
+    "record_data_df_BodyMass_start_Sep23 = record_data_df_dict[\"BodyMass\"].loc[\n",
+    "    (record_data_df_dict[\"BodyMass\"][\"Date\"] >= \"2023-09-01\")\n",
+    "]\n",
     "\n",
     "# Active Energy Burned before and after workout routine\n",
-    "record_data_df_ActiveEnergyBurned_before_workout = record_data_df_dict_monthly[\"ActiveEnergyBurned\"].loc[(record_data_df_dict_monthly[\"ActiveEnergyBurned\"]['Date'] < '2023-09-01')]\n",
-    "record_data_df_ActiveEnergyBurned_after_workout = record_data_df_dict_monthly[\"ActiveEnergyBurned\"].loc[(record_data_df_dict_monthly[\"ActiveEnergyBurned\"]['Date'] >= '2023-09-01')]\n",
+    "record_data_df_ActiveEnergyBurned_before_workout = record_data_df_dict_monthly[\n",
+    "    \"ActiveEnergyBurned\"\n",
+    "].loc[(record_data_df_dict_monthly[\"ActiveEnergyBurned\"][\"Date\"] < \"2023-09-01\")]\n",
+    "record_data_df_ActiveEnergyBurned_after_workout = record_data_df_dict_monthly[\n",
+    "    \"ActiveEnergyBurned\"\n",
+    "].loc[(record_data_df_dict_monthly[\"ActiveEnergyBurned\"][\"Date\"] >= \"2023-09-01\")]\n",
     "\n",
     "# Basal Energy Burned before and after workout routine\n",
-    "record_data_df_BasalEnergyBurned_before_workout = record_data_df_dict_monthly[\"BasalEnergyBurned\"].loc[(record_data_df_dict_monthly[\"BasalEnergyBurned\"]['Date'] < '2023-09-01')]\n",
-    "record_data_df_BasalEnergyBurned_after_workout = record_data_df_dict_monthly[\"BasalEnergyBurned\"].loc[(record_data_df_dict_monthly[\"BasalEnergyBurned\"]['Date'] >= '2023-09-01')]\n",
+    "record_data_df_BasalEnergyBurned_before_workout = record_data_df_dict_monthly[\n",
+    "    \"BasalEnergyBurned\"\n",
+    "].loc[(record_data_df_dict_monthly[\"BasalEnergyBurned\"][\"Date\"] < \"2023-09-01\")]\n",
+    "record_data_df_BasalEnergyBurned_after_workout = record_data_df_dict_monthly[\n",
+    "    \"BasalEnergyBurned\"\n",
+    "].loc[(record_data_df_dict_monthly[\"BasalEnergyBurned\"][\"Date\"] >= \"2023-09-01\")]\n",
     "# Distance Walking-Running before and after workout routine\n",
-    "record_data_df_Distance_before_workout = record_data_df_dict_monthly[\"DistanceWalkingRunning\"].loc[(record_data_df_dict_monthly[\"DistanceWalkingRunning\"]['Date'] < '2023-09-01')]\n",
-    "record_data_df_Distance_after_workout = record_data_df_dict_monthly[\"DistanceWalkingRunning\"].loc[(record_data_df_dict_monthly[\"DistanceWalkingRunning\"]['Date'] >= '2023-09-01')]\n",
+    "record_data_df_Distance_before_workout = record_data_df_dict_monthly[\n",
+    "    \"DistanceWalkingRunning\"\n",
+    "].loc[(record_data_df_dict_monthly[\"DistanceWalkingRunning\"][\"Date\"] < \"2023-09-01\")]\n",
+    "record_data_df_Distance_after_workout = record_data_df_dict_monthly[\n",
+    "    \"DistanceWalkingRunning\"\n",
+    "].loc[(record_data_df_dict_monthly[\"DistanceWalkingRunning\"][\"Date\"] >= \"2023-09-01\")]\n",
     "# Step count before and after workout routine\n",
-    "record_data_df_StepCount_before_workout = record_data_df_dict_monthly[\"StepCount\"].loc[(record_data_df_dict_monthly[\"StepCount\"]['Date'] < '2023-09-01')]\n",
-    "record_data_df_StepCount_after_workout = record_data_df_dict_monthly[\"StepCount\"].loc[(record_data_df_dict_monthly[\"StepCount\"]['Date'] >= '2023-09-01')]"
+    "record_data_df_StepCount_before_workout = record_data_df_dict_monthly[\"StepCount\"].loc[\n",
+    "    (record_data_df_dict_monthly[\"StepCount\"][\"Date\"] < \"2023-09-01\")\n",
+    "]\n",
+    "record_data_df_StepCount_after_workout = record_data_df_dict_monthly[\"StepCount\"].loc[\n",
+    "    (record_data_df_dict_monthly[\"StepCount\"][\"Date\"] >= \"2023-09-01\")\n",
+    "]"
    ]
   },
   {
@@ -9880,21 +9926,21 @@
    ],
    "source": [
     "final_workout_dict = []\n",
-    "workout_list = list(root.iter('Workout'))\n",
+    "workout_list = list(root.iter(\"Workout\"))\n",
     "\n",
     "for i in range(len(workout_list)):\n",
     "    workout_dict = workout_list[i].attrib\n",
-    "    WorkoutStatisticsList = list(workout_list[i].iter('WorkoutStatistics'))\n",
+    "    WorkoutStatisticsList = list(workout_list[i].iter(\"WorkoutStatistics\"))\n",
     "\n",
     "    for i, WorkoutStatistics in enumerate(WorkoutStatisticsList):\n",
-    "        if \"ActiveEnergyBurned\" in WorkoutStatistics.attrib['type']:\n",
-    "            workout_dict['activeEnergyBurned'] = WorkoutStatistics.attrib['sum']\n",
-    "        if \"BasalEnergyBurned\" in WorkoutStatistics.attrib['type']:\n",
-    "            workout_dict['basalEnergyBurned'] = WorkoutStatistics.attrib['sum']\n",
+    "        if \"ActiveEnergyBurned\" in WorkoutStatistics.attrib[\"type\"]:\n",
+    "            workout_dict[\"activeEnergyBurned\"] = WorkoutStatistics.attrib[\"sum\"]\n",
+    "        if \"BasalEnergyBurned\" in WorkoutStatistics.attrib[\"type\"]:\n",
+    "            workout_dict[\"basalEnergyBurned\"] = WorkoutStatistics.attrib[\"sum\"]\n",
     "\n",
     "    final_workout_dict.append(workout_dict)\n",
     "\n",
-    "final_workout_df = pd.DataFrame(final_workout_dict) # create final_workout_df dataframe\n",
+    "final_workout_df = pd.DataFrame(final_workout_dict)  # create final_workout_df dataframe\n",
     "final_workout_df.head()"
    ]
   },
@@ -10085,24 +10131,46 @@
    ],
    "source": [
     "# drop 'creationDate' and 'endDate' column\n",
-    "final_workout_df_cleaned = final_workout_df.drop(['sourceName', 'sourceVersion', 'device', 'creationDate', 'endDate'], axis=1)\n",
+    "final_workout_df_cleaned = final_workout_df.drop(\n",
+    "    [\"sourceName\", \"sourceVersion\", \"device\", \"creationDate\", \"endDate\"], axis=1\n",
+    ")\n",
     "\n",
     "# transform creationDate into date format\n",
-    "final_workout_df_cleaned['Date'] = pd.to_datetime(final_workout_df['startDate']).dt.strftime('%Y-%m-d')\n",
-    "final_workout_df_cleaned['Day'] = pd.to_datetime(final_workout_df['startDate']).dt.strftime('%A')\n",
+    "final_workout_df_cleaned[\"Date\"] = pd.to_datetime(\n",
+    "    final_workout_df[\"startDate\"]\n",
+    ").dt.strftime(\"%Y-%m-d\")\n",
+    "final_workout_df_cleaned[\"Day\"] = pd.to_datetime(\n",
+    "    final_workout_df[\"startDate\"]\n",
+    ").dt.strftime(\"%A\")\n",
     "\n",
     "# rename Activity Type\n",
-    "final_workout_df_cleaned['workoutActivityType'] = final_workout_df['workoutActivityType'].str.replace('HKWorkoutActivityType', '')\n",
+    "final_workout_df_cleaned[\"workoutActivityType\"] = final_workout_df[\n",
+    "    \"workoutActivityType\"\n",
+    "].str.replace(\"HKWorkoutActivityType\", \"\")\n",
     "\n",
     "# reorder column\n",
-    "final_workout_df_cleaned = final_workout_df_cleaned[['Day', 'Date', 'workoutActivityType', 'duration', 'durationUnit', 'activeEnergyBurned', 'basalEnergyBurned']]\n",
+    "final_workout_df_cleaned = final_workout_df_cleaned[\n",
+    "    [\n",
+    "        \"Day\",\n",
+    "        \"Date\",\n",
+    "        \"workoutActivityType\",\n",
+    "        \"duration\",\n",
+    "        \"durationUnit\",\n",
+    "        \"activeEnergyBurned\",\n",
+    "        \"basalEnergyBurned\",\n",
+    "    ]\n",
+    "]\n",
     "\n",
     "# transform type of 'duration' from object into float\n",
-    "final_workout_df_cleaned['duration'] = final_workout_df['duration'].astype(float)\n",
+    "final_workout_df_cleaned[\"duration\"] = final_workout_df[\"duration\"].astype(float)\n",
     "\n",
     "# transform data type of 'activeEnergyBurned' and 'basalEnergyBurned' from object into float\n",
-    "final_workout_df_cleaned['activeEnergyBurned'] = final_workout_df['activeEnergyBurned'].astype(float)\n",
-    "final_workout_df_cleaned['basalEnergyBurned'] = final_workout_df['basalEnergyBurned'].astype(float)\n",
+    "final_workout_df_cleaned[\"activeEnergyBurned\"] = final_workout_df[\n",
+    "    \"activeEnergyBurned\"\n",
+    "].astype(float)\n",
+    "final_workout_df_cleaned[\"basalEnergyBurned\"] = final_workout_df[\n",
+    "    \"basalEnergyBurned\"\n",
+    "].astype(float)\n",
     "\n",
     "display(final_workout_df_cleaned)"
    ]
@@ -10294,16 +10362,11 @@
    ],
    "source": [
     "# filter workout data starts from when the regular workout was started (September 2023)\n",
-    "workout_routine_df = final_workout_df_cleaned.loc[(final_workout_df_cleaned['Date'] >= '2023-09-01')]\n",
+    "workout_routine_df = final_workout_df_cleaned.loc[\n",
+    "    (final_workout_df_cleaned[\"Date\"] >= \"2023-09-01\")\n",
+    "]\n",
     "display(workout_routine_df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
