--- a/workout_data_cleaning.ipynb
+++ b/workout_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -9023,7 +9023,7 @@
        " ...]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9037,7 +9037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -9306,7 +9306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -9369,7 +9369,7 @@
        "       'HKQuantityTypeIdentifierHeartRateVariabilitySDNN'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9381,7 +9381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -9610,7 +9610,7 @@
        "[1145451 rows x 9 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9622,7 +9622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9662,7 +9662,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>value</th>\n",
+       "      <th>unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2504043</th>\n",
+       "      <td>DistanceCycling</td>\n",
+       "      <td>2019-1221</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>December</td>\n",
+       "      <td>0.712713</td>\n",
+       "      <td>mi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2504044</th>\n",
+       "      <td>DistanceCycling</td>\n",
+       "      <td>2019-0801</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>August</td>\n",
+       "      <td>2.292240</td>\n",
+       "      <td>mi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2504045</th>\n",
+       "      <td>DistanceCycling</td>\n",
+       "      <td>2019-0801</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>August</td>\n",
+       "      <td>3.511370</td>\n",
+       "      <td>mi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2504046</th>\n",
+       "      <td>DistanceCycling</td>\n",
+       "      <td>2019-0730</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>July</td>\n",
+       "      <td>1.389390</td>\n",
+       "      <td>mi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2504047</th>\n",
+       "      <td>DistanceCycling</td>\n",
+       "      <td>2019-0731</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>July</td>\n",
+       "      <td>1.891450</td>\n",
+       "      <td>mi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2531126</th>\n",
+       "      <td>DistanceCycling</td>\n",
+       "      <td>2024-0801</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>August</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>mi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2531127</th>\n",
+       "      <td>DistanceCycling</td>\n",
+       "      <td>2024-0801</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>August</td>\n",
+       "      <td>0.000076</td>\n",
+       "      <td>mi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2531128</th>\n",
+       "      <td>DistanceCycling</td>\n",
+       "      <td>2024-0801</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>August</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>mi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2531129</th>\n",
+       "      <td>DistanceCycling</td>\n",
+       "      <td>2024-0801</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>August</td>\n",
+       "      <td>0.000974</td>\n",
+       "      <td>mi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2531130</th>\n",
+       "      <td>DistanceCycling</td>\n",
+       "      <td>2024-0801</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>August</td>\n",
+       "      <td>0.000138</td>\n",
+       "      <td>mi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>27088 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    type       Date        Day     Month     value unit\n",
+       "2504043  DistanceCycling  2019-1221   Saturday  December  0.712713   mi\n",
+       "2504044  DistanceCycling  2019-0801   Thursday    August  2.292240   mi\n",
+       "2504045  DistanceCycling  2019-0801   Thursday    August  3.511370   mi\n",
+       "2504046  DistanceCycling  2019-0730    Tuesday      July  1.389390   mi\n",
+       "2504047  DistanceCycling  2019-0731  Wednesday      July  1.891450   mi\n",
+       "...                  ...        ...        ...       ...       ...  ...\n",
+       "2531126  DistanceCycling  2024-0801   Thursday    August  0.000034   mi\n",
+       "2531127  DistanceCycling  2024-0801   Thursday    August  0.000076   mi\n",
+       "2531128  DistanceCycling  2024-0801   Thursday    August  0.000035   mi\n",
+       "2531129  DistanceCycling  2024-0801   Thursday    August  0.000974   mi\n",
+       "2531130  DistanceCycling  2024-0801   Thursday    August  0.000138   mi\n",
+       "\n",
+       "[27088 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# record_data_cleaned['type'].unique()\n",
+    "record_data_cleaned[record_data_cleaned['type'] == 'DistanceCycling']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9678,7 +9844,7 @@
     "    \"StepCount\",\n",
     "    \"AppleStandTime\",\n",
     "    \"WalkingSpeed\",\n",
-    "    \"RunningSpeed\",\n",
+    "    \"DistanceCycling\",\n",
     "    \"HeartRateVariabilitySDNN\",\n",
     "    \"RestingHeartRate\",\n",
     "    \"WalkingHeartRate\",\n",
@@ -9698,7 +9864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9707,6 +9873,7 @@
     "    \"BasalEnergyBurned\",\n",
     "    \"ActiveEnergyBurned\",\n",
     "    \"DistanceWalkingRunning\",\n",
+    "    \"DistanceCycling\",\n",
     "    \"StepCount\",\n",
     "    \"AppleStandTime\",\n",
     "]\n",
@@ -9723,7 +9890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9739,9 +9906,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexingError",
+     "evalue": "Unalignable boolean Series provided as indexer (index of the boolean Series and of the indexed object do not match).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexingError\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 25\u001b[0m\n\u001b[0;32m     21\u001b[0m record_data_df_BasalEnergyBurned_after_workout \u001b[38;5;241m=\u001b[39m record_data_df_dict_monthly[\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBasalEnergyBurned\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     23\u001b[0m ]\u001b[38;5;241m.\u001b[39mloc[(record_data_df_dict_monthly[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBasalEnergyBurned\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2023-09-01\u001b[39m\u001b[38;5;124m\"\u001b[39m)]\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# Distance Walking-Running before and after workout routine\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m record_data_df_Distance_before_workout \u001b[38;5;241m=\u001b[39m record_data_df_dict_monthly[\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDistanceWalkingRunning\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     27\u001b[0m ]\u001b[38;5;241m.\u001b[39mloc[(record_data_df_dict_monthly[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDistanceCycling\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m<\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2023-09-01\u001b[39m\u001b[38;5;124m\"\u001b[39m)]\n\u001b[0;32m     28\u001b[0m record_data_df_Distance_after_workout \u001b[38;5;241m=\u001b[39m record_data_df_dict_monthly[\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDistanceWalkingRunning\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     30\u001b[0m ]\u001b[38;5;241m.\u001b[39mloc[(record_data_df_dict_monthly[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDistanceCycling\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2023-09-01\u001b[39m\u001b[38;5;124m\"\u001b[39m)]\n\u001b[0;32m     31\u001b[0m \u001b[38;5;66;03m# Step count before and after workout routine\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\drebi\\miniconda3\\envs\\health\\Lib\\site-packages\\pandas\\core\\indexing.py:1191\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1189\u001b[0m maybe_callable \u001b[38;5;241m=\u001b[39m com\u001b[38;5;241m.\u001b[39mapply_if_callable(key, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj)\n\u001b[0;32m   1190\u001b[0m maybe_callable \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_deprecated_callable_usage(key, maybe_callable)\n\u001b[1;32m-> 1191\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_axis(maybe_callable, axis\u001b[38;5;241m=\u001b[39maxis)\n",
+      "File \u001b[1;32mc:\\Users\\drebi\\miniconda3\\envs\\health\\Lib\\site-packages\\pandas\\core\\indexing.py:1413\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_axis\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1411\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_slice_axis(key, axis\u001b[38;5;241m=\u001b[39maxis)\n\u001b[0;32m   1412\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m com\u001b[38;5;241m.\u001b[39mis_bool_indexer(key):\n\u001b[1;32m-> 1413\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getbool_axis(key, axis\u001b[38;5;241m=\u001b[39maxis)\n\u001b[0;32m   1414\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_list_like_indexer(key):\n\u001b[0;32m   1415\u001b[0m     \u001b[38;5;66;03m# an iterable multi-selection\u001b[39;00m\n\u001b[0;32m   1416\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mtuple\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(labels, MultiIndex)):\n",
+      "File \u001b[1;32mc:\\Users\\drebi\\miniconda3\\envs\\health\\Lib\\site-packages\\pandas\\core\\indexing.py:1209\u001b[0m, in \u001b[0;36m_LocationIndexer._getbool_axis\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1205\u001b[0m \u001b[38;5;129m@final\u001b[39m\n\u001b[0;32m   1206\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_getbool_axis\u001b[39m(\u001b[38;5;28mself\u001b[39m, key, axis: AxisInt):\n\u001b[0;32m   1207\u001b[0m     \u001b[38;5;66;03m# caller is responsible for ensuring non-None axis\u001b[39;00m\n\u001b[0;32m   1208\u001b[0m     labels \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39m_get_axis(axis)\n\u001b[1;32m-> 1209\u001b[0m     key \u001b[38;5;241m=\u001b[39m check_bool_indexer(labels, key)\n\u001b[0;32m   1210\u001b[0m     inds \u001b[38;5;241m=\u001b[39m key\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m   1211\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39m_take_with_is_copy(inds, axis\u001b[38;5;241m=\u001b[39maxis)\n",
+      "File \u001b[1;32mc:\\Users\\drebi\\miniconda3\\envs\\health\\Lib\\site-packages\\pandas\\core\\indexing.py:2662\u001b[0m, in \u001b[0;36mcheck_bool_indexer\u001b[1;34m(index, key)\u001b[0m\n\u001b[0;32m   2660\u001b[0m indexer \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39mget_indexer_for(index)\n\u001b[0;32m   2661\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m \u001b[38;5;129;01min\u001b[39;00m indexer:\n\u001b[1;32m-> 2662\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m IndexingError(\n\u001b[0;32m   2663\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnalignable boolean Series provided as \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2664\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindexer (index of the boolean Series and of \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2665\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthe indexed object do not match).\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2666\u001b[0m     )\n\u001b[0;32m   2668\u001b[0m result \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[0;32m   2670\u001b[0m \u001b[38;5;66;03m# fall through for boolean\u001b[39;00m\n",
+      "\u001b[1;31mIndexingError\u001b[0m: Unalignable boolean Series provided as indexer (index of the boolean Series and of the indexed object do not match)."
+     ]
+    }
+   ],
    "source": [
     "# Before vs After Workout\n",
     "# Workout routine starts from 1 September 2022 -> data filter after workout are specified starts on this date\n",
@@ -9768,11 +9951,11 @@
     "].loc[(record_data_df_dict_monthly[\"BasalEnergyBurned\"][\"Date\"] >= \"2023-09-01\")]\n",
     "# Distance Walking-Running before and after workout routine\n",
     "record_data_df_Distance_before_workout = record_data_df_dict_monthly[\n",
-    "    \"DistanceWalkingRunning\"\n",
-    "].loc[(record_data_df_dict_monthly[\"DistanceWalkingRunning\"][\"Date\"] < \"2023-09-01\")]\n",
+    "    \"DistanceCycling\"\n",
+    "].loc[(record_data_df_dict_monthly[\"DistanceCycling\"][\"Date\"] < \"2023-09-01\")]\n",
     "record_data_df_Distance_after_workout = record_data_df_dict_monthly[\n",
-    "    \"DistanceWalkingRunning\"\n",
-    "].loc[(record_data_df_dict_monthly[\"DistanceWalkingRunning\"][\"Date\"] >= \"2023-09-01\")]\n",
+    "    \"DistanceCycling\"\n",
+    "].loc[(record_data_df_dict_monthly[\"DistanceCycling\"][\"Date\"] >= \"2023-09-01\")]\n",
     "# Step count before and after workout routine\n",
     "record_data_df_StepCount_before_workout = record_data_df_dict_monthly[\"StepCount\"].loc[\n",
     "    (record_data_df_dict_monthly[\"StepCount\"][\"Date\"] < \"2023-09-01\")\n",
